  Removed conf.h fron the SVN, as this is created by the configure script
  Minor IBT system change for accurately finding who logged an IBT
  Minor IBT change to list 'in-progress' IBT's in yellow
  Bug Fix: Webster added to the util makefile for make all (wasn't compiling)
  Update to webster code to hopefully fix 'tell m-w' bug
[Nov 01 2010] - Rumble
  Fixed do_scan crash due to exits to NOWHERE. (thanks Rhade)
  Changed do_score experience tnl to list only mortals since LVL_IMMORT showed negative EXP.
[Oct 30 2010] - Jamdog
  Added ability for players to list/show their own ideas, bugs and typos (thanks Frenze)
  Added more details to header for idea/bug/typo show command (thanks Parna)
[Oct 20 2010] - Rumble
  Fixed freeing of null pointers in ibt.c (thanks Stoneheart)
[Sep 28 2010] - Rumble
  Fixed a couple NPC accessing player data errors.
  Fixed oedit extra desc's from always showing "Set" even if they weren't. (thanks Mirad)
[Sep 19 2010] - Rumble
  Updated World and files for 3.62 release.
[Sep 11 2010] - Rumble
  Fixed non-unix file formats and permissions. (thanks Mirad)
[Jul 26 2010] - Rumble
  Corrected several bad wear flags on objects. (thanks Insomnia)
[Jul 12 2010] - Rumble
  Fixed bad sector types. (thanks Insomnia)
[Jul 06 2010] - Rumble
  Numerous typo fixes and World files added to SVN. (thanks Insomnia)
  Fixed medit alignment menu to return you to stats menu after entry. (thanks Tink)
[Jul 03 2010] - Rumble
  Fixed oedit to allow setting of UNDEFINED object type. (thanks Tink)
  Fixed alias bug from using * as first character. (thanks Dio)
[Jun 20 2010] - Rumble
  Fixed two memory leaks. (thanks Dio)
[Jum 19 2010] - Fizban
  Changed Helpcheck from level 34 to level 32.
[Jun 07 2010] - Fizban
  Enabled nohassled immortals to give cursed items to other players.
[Jun 18 2010] - Rumble
  Fixed unaffect clearing ch affects and not vict. (thanks Drefs)
[May 24 2010] - Rumble
  Fixed bug in redit copy duplicating people in room. (thanks Anderyu)